Styling fixes (z-index markers, settings margin)

--- a/src/styles/components/_mapSlider.scss
+++ b/src/styles/components/_mapSlider.scss
@@ -1,6 +1,7 @@
 .slick-slider {
   position: relative;
   bottom: 230px;
+  z-index: 4;
 }
 
 .sliderCard {
