--- a/src/styles/pages/_profile.scss
+++ b/src/styles/pages/_profile.scss
@@ -27,9 +27,9 @@
 
   &__table {
     display: grid;
-    margin: 0 20px;
+    margin: 40px 20px;
     padding:20px;
-    background: rgba(243, 243, 243, 0.3);  
+    background: rgba(243, 243, 243, 0.3);
   }
 
   &__row {
